--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ fig.png
 asyncio_tute/*/foundurls.txt
 web/scrap_pi/*.txt
 web/scrap_pi/images/*.jpg
+*.jpeg
+*.png
 
 #torch
 model/torch_tute/data/*
