Add dependency resolution functions using BFS and DFS in Jupyter notebook
- Implemented `resolve_dependencies_bfs` and `resolve_dependencies_dfs` functions to resolve package dependencies.
- Defined `PackageMetadata` class to structure package metadata.
- Loaded CRAN index from a pickle file for testing.
- Added code to compare the number of resolved packages using both BFS and DFS methods.

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@ model_related/torch_tute/data/*
 model_related/torch_tute/model.pth
 web_related/wallpaper/pictures/*
 
+# data
 *.csv
 !data_related/toydata/*.csv
+*.pkl
 
 #outputs
 *.zip
